--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -12,7 +12,8 @@
         <ImageView
             android:id="@+id/imgProd"
             android:layout_width="60dp"
-            android:layout_height="60dp" />
+            android:layout_height="60dp"
+            android:contentDescription="TODO" />
         <TextView
             android:id="@+id/txtName"
             android:layout_width="match_parent"
