Start navigation and set up firestore

--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -39,6 +39,7 @@
         android:layout_marginStart="176dp"
         android:layout_marginTop="113dp"
         android:layout_marginEnd="177dp"
+        android:textSize="24dp"
         android:text="WELCOME to EJShop"
         app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
